# Raudio

./: .gitignore  Cargo.toml  README.md  app.rs  build.rs  install.sh  library.rs  main.rs  player.rs  scanner.rs  theme.rs  uninstall.sh  window.rs
resources/: raudio.gresource.xml  style.css
src/: app.rs  library.rs  main.rs  theme.rs  window.rs
windows/: bundle.sh  raudio.iss
